--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</div>
 		
 		<div id="two">
-			<img src="food1.jpg" alt="food"/>
+			<img src="title.png" alt="food"/>
 		</div>
 		
 		<div id="three">
